--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:mockoon": "nodemon",
     "lint": "next lint",
     "format": "prettier --write ."
   },
@@ -17,12 +18,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@mockoon/cli": "^8.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "typescript": "^5"
   }
