--- a/package.json
+++ b/package.json
@@ -7,22 +7,30 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "jest": "^29.7.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "ts-node": "^10.9.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "typescript": "^5"
