--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.15",
     "@types/react": "^18",
