--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "db:push": "drizzle-kit push:sqlite --config ./drizzle.config.ts",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx seed.ts"
   },
   "dependencies": {
+    "@netlify/functions": "^2.8.1",
+    "@libsql/client": "^0.6.0",
+    "drizzle-orm": "^0.30.10",
+    "dotenv": "^16.4.5",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "jest": "^29.7.0",
@@ -34,6 +41,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
+    "drizzle-kit": "^0.20.18",
     "typescript": "^5"
   }
 }
